# rdma_client_server

./: CMakeLists.txt  README.md  rdma_client.c  rdma_client_lib.c  rdma_server.c  rdma_server_lib.c
include/: client_server_shared.h  rdma_client_lib.h  rdma_server_lib.h
